# JKYi-rpc

./: CMakeLists.txt  README.md
JKYi-rpc/: CMakeLists.txt  RpcChannel.cc  RpcConfig.cc  RpcController.cc  RpcProvider.cc  rpcheader.pb.cc  rpcheader.proto  zookeeperutil.cc
JKYi-rpc/include/: RpcChannel.h  RpcConfig.h  RpcController.h  RpcProvider.h  rpcheader.pb.h  zookeeperutil.h
examples/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
examples/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
examples/caller/: CMakeLists.txt  callerfriendservice.cc  calleruserservice.cc
